data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2120.wast
;; 1. **Infinite Loop with `br_if` Miscondition**:    - **Test Description**: Create a block with a loop inside that includes a `br_if` condition evaluating to false due to an improperly managed condition. This will loop infinitely if the framework mishandles the exit condition.    - **Constraint**: Ensuring `br_if` condition is evaluated correctly to break out of the loop.    - **Relation to Infinite Loops**: Incorrectly handling the `br_if` instruction’s condition can cause code to loop indefinitely.

(assert_invalid
  (module (func $loop_br_if_miscondition
    (block (result i32)
      (loop (result i32)
        (block (result i32)
          (br_if 1 (i32.const 0)) 
          (br 0))
        (i32.const 1)))))
  "infinite loop on incorrect br_if condition")